cmake_minimum_required(VERSION 3.15)
project(UntitledCarGame)

set(CMAKE_CXX_STANDARD 20)

add_executable(UntitledCarGame src/main.cpp src/Screen.cpp src/Screen.h src/entities/AbstractEntity.cpp src/entities/AbstractEntity.h src/entities/TestEntity.cpp src/entities/TestEntity.h src/entities/PlayerEntity.cpp src/entities/PlayerEntity.h src/Controls.cpp src/Controls.h src/globals.h src/entities/NpcEntity.cpp src/entities/NpcEntity.h src/spawners/AbstractSpawner.cpp src/spawners/AbstractSpawner.h src/spawners/CarSpawner.cpp src/spawners/CarSpawner.h src/entities/CarEntity.cpp src/entities/CarEntity.h src/entities/FuelEntity.cpp src/entities/FuelEntity.h src/entities/NailEntity.cpp src/entities/NailEntity.h src/spawners/FuelSpawner.cpp src/spawners/FuelSpawner.h src/spawners/NailSpawner.cpp src/spawners/NailSpawner.h src/GameState.h src/Level.cpp src/Level.h src/LevelFactory.cpp src/LevelFactory.h src/CollisionHandler.cpp src/CollisionHandler.h src/GameState.cpp src/StatsBlock.cpp src/StatsBlock.h)